// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`display errors 1`] = `
Object {
  "Constructor": "RoutesSettingsFormPassword",
  "Options": Object {
    "ID": "component",
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "onUpdateSuccess": [Function],
  },
  "html": "
<form class=\\"form-layout\\">
  <!--header-->
  <ul class=\\"errors-panel\\">
    <li>Update password fail</li>
  </ul>
  <!--if-->
  <!--ErrorsPanel-->
  <div class=\\"form-group\\">
    <label> Enter your password: </label>
    <input name=\\"pass1\\" type=\\"password\\" autofocus=\\"\\">
  </div>
  <div class=\\"form-group\\">
    <label> Confirm your password: </label>
    <input name=\\"pass2\\" type=\\"password\\">
  </div>
  <!--default-->
  <!--default-->
  <button type=\\"submit\\">
    <!--if-->Update
    <!--submit-->
  </button>
  <!--footer-->
</form>
<!--FormContainer-->
<!--if-->
<!--FormWithConfirmModal-->
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Constructor": "RoutesSettingsFormPassword",
  "Options": Object {
    "ID": "component",
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "onUpdateSuccess": [Function],
  },
  "html": "
<form class=\\"form-layout\\">
  <!--header-->
  <!--if-->
  <!--ErrorsPanel-->
  <div class=\\"form-group\\">
    <label> Enter your password: </label>
    <input name=\\"pass1\\" type=\\"password\\" autofocus=\\"\\">
  </div>
  <div class=\\"form-group\\">
    <label> Confirm your password: </label>
    <input name=\\"pass2\\" type=\\"password\\">
  </div>
  <!--default-->
  <!--default-->
  <button type=\\"submit\\">
    <!--if-->Update
    <!--submit-->
  </button>
  <!--footer-->
</form>
<!--FormContainer-->
<!--if-->
<!--FormWithConfirmModal-->
",
}
`;
